test/files/pos/t5954d/B_2.scala
// scalac: -Xfatal-warnings -Xdev
package p {
  trait T {
    class B
    object B
  }
  package object base extends T
}
