test/files/neg/t5954d/B_2.scala
package p {
  trait T {
    class B
    object B
  }
  package object base extends T
}
